# jsonschema-validator

./: .pre-commit-config.yaml  .pre-commit-hooks.yaml  .prospector.yaml  Makefile  README.md  SECURITY.md  jsonschema-gentypes.yaml  pyproject.toml  requirements.txt
.github/: publish.yaml  renovate.json5
.github/workflows/: audit.yaml  clean.yaml  main.yaml  pull-request-automation.yaml
ci/: config.yaml  requirements.txt
jsonschema_validator/: __init__.py  json_schema.py
tests/: correct.yaml  schema.json  test_validate.py  wrong.yaml
