[tool.ruff]
target-version = "py39"
line-length = 110

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.poetry]
name = "jsonschema-validator-new"
version = "0.0.0"
description = "Tool to validate files against a JSON Schema"
readme = "README.md"
authors = ["Stéphane Brunner <stephane.brunner@gmail.com>"]
repository = "https://github.com/sbrunner/jsonschema-validator"
license = "BSD-2-Clause"
keywords = ["jsonschema", "types"]
packages = [{ include = "jsonschema_validator" }]
include = ["jsonschema_validators/py.typed"]
classifiers = [
    'Development Status :: 4 - Beta',
    'Environment :: Console',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: BSD License',
    'Operating System :: OS Independent',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Programming Language :: Python :: 3.13',
    'Topic :: Software Development :: Code Generators',
    'Typing :: Typed',
]

[tool.poetry.scripts]
jsonschema-validator = "jsonschema_validator:main"

[tool.poetry.dependencies]
python = ">=3.9,<4"
jsonschema = "4.23.0"
requests = "2.32.3"
"ruamel.yaml" = "0.18.10"

[tool.poetry.group.dev.dependencies]
prospector-profile-duplicated = "1.10.5"
prospector = { extras = ["with_mypy", "with_bandit", "with_pyroma", "with_ruff"], version = "1.16.1" }
pytest = "8.3.4"
pytest-cov = "6.0.0"
types-requests = "2.32.0.20250301"
types-pyyaml = "6.0.12.20241230"
prospector-profile-utils = "1.22.3"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
pattern = "^(?P<base>\\d+(\\.\\d+)*)"
format-jinja = """
{%- if env.get("VERSION_TYPE") == "default_branch" -%}
{{serialize_pep440(bump_version(base, 1), dev=distance)}}
{%- elif env.get("VERSION_TYPE") == "stabilization_branch" -%}
{{serialize_pep440(bump_version(base, 2), dev=distance)}}
{%- elif distance == 0 -%}
{{serialize_pep440(base)}}
{%- else -%}
{{serialize_pep440(bump_version(base), dev=distance)}}
{%- endif -%}
"""

[tool.poetry-plugin-tweak-dependencies-version]
default = "present"

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning", "poetry-plugin-tweak-dependencies-version", "poetry-plugin-drop-python-upper-constraint"]
build-backend = "poetry.core.masonry.api"
