[tool.ruff]
target-version = "py39"
line-length = 110

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.poetry]
version = "0.0.0"

[tool.poetry.dependencies]
python = ">=3.9,<4"
jsonschema = "4.24.0"
requests = "2.32.3"
"ruamel.yaml" = "0.18.12"

[tool.poetry.group.dev.dependencies]
prospector-profile-duplicated = "1.10.5"
prospector = { extras = ["with_mypy", "with_bandit", "with_pyroma", "with_ruff"], version = "1.17.1" }
pytest = "8.3.5"
pytest-cov = "6.1.1"
types-requests = "2.32.0.20250515"
types-pyyaml = "6.0.12.20250516"
prospector-profile-utils = "1.23.0"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
pattern = "^(?P<base>\\d+(\\.\\d+)*)"
format-jinja = """
{%- if env.get("VERSION_TYPE") == "default_branch" -%}
{{serialize_pep440(bump_version(base, 1), dev=distance)}}
{%- elif env.get("VERSION_TYPE") == "stabilization_branch" -%}
{{serialize_pep440(bump_version(base, 2), dev=distance)}}
{%- elif distance == 0 -%}
{{serialize_pep440(base)}}
{%- else -%}
{{serialize_pep440(bump_version(base), dev=distance)}}
{%- endif -%}
"""

[tool.poetry-plugin-tweak-dependencies-version]
default = "present"

[project]
dynamic = ["dependencies", "version"]
name = "jsonschema-validator-new"
description = "Tool to validate files against a JSON Schema"
readme = "README.md"
keywords = ["jsonschema", "types"]
license = "BSD-2-Clause"
classifiers = [
    'Development Status :: 4 - Beta',
    'Environment :: Console',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: BSD License',
    'Operating System :: OS Independent',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Programming Language :: Python :: 3.13',
    'Topic :: Software Development :: Code Generators',
    'Typing :: Typed',
]
authors = [{name = "Stéphane Brunner",email = "stephane.brunner@gmail.com"}]
packages = [{ include = "jsonschema_validator" }]
include = ["jsonschema_validators/py.typed"]
requires-python = ">=3.9"
dependencies = ["jsonschema", "requests", "ruamel.yaml"]

[project.urls]
repository = "https://github.com/sbrunner/jsonschema-validator"
"Bug Tracker" = "https://github.com/sbrunner/jsonschema-validator/issues"

[project.scripts]
jsonschema-validator = "jsonschema_validator:main"

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry.core.masonry.api"
